# almondmatcha

./: .gitignore  DOMAIN_ARCHITECTURE_FIX.md  MSG_REFACTORING_SUMMARY.md  PYTHON_BEST_PRACTICES.md  README.md  REFACTORING_SUMMARY_2025-11-04.md  SENSOR_FUSION_ARCHITECTURE.md  TOMORROW_ACTION_ITEMS.md  WORK_SESSION_2025-11-04.md  cmd_jetson_launch.txt  cmd_rover_launch.txt  command.txt  sync_stm32_interfaces.sh
command/: cmd_base_launch.txt  cmd_jetson_launch.txt  cmd_rpi_launch.txt  command.txt
common_ifaces/: README.md
common_ifaces/action_ifaces/: CMakeLists.txt  package.xml
common_ifaces/msgs_ifaces/: CMakeLists.txt  package.xml
common_ifaces/msgs_ifaces/msg/: ChassisCtrl.msg  RoverStatus.msg  SpresenseGNSS.msg  UbloxGNSS.msg
common_ifaces/services_ifaces/: CMakeLists.txt  package.xml
copilot-session-note/: FINAL_SESSION_SUMMARY_2025-11-04.md  REFACTORING_SUMMARY_2025-11-04.md  SESSION_CONSOLIDATED_2025-11-04.md  SESSION_SUMMARY_2025-11-04.md  TOMORROW_ACTION_ITEMS.md  WORK_SESSION_2025-11-01.md  WORK_SESSION_2025-11-03.md  WORK_SESSION_2025-11-04_ws_jetson.md
docs/: ARCHITECTURE.md  DDS_DISCOVERY_FIX.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOMAINS.md  DOMAIN_ARCHITECTURE.md  DOMAIN_CONSOLIDATION_SUMMARY.md  DOMAIN_SEPARATED_ARCHITECTURE.md  DUAL_DOMAIN_IMPLEMENTATION_SUMMARY.md  FLASHING_REMOTE_CLI_QUICK.md  GNSS_NMEA_DEBUG_GUIDE.md  GNSS_NMEA_RECEPTION_TROUBLESHOOTING.md  GNSS_NO_DATA_TROUBLESHOOTING.md  GNSS_USART6_PIN_FIX.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_INSTRUCTIONS.md  LAUNCH_SEQUENCE_GUIDE.md  MONITORING_ARCHITECTURE.md  QA_REPORT_2025-11-06.md  QUICK_REFERENCE.md  REFACTORING_CHANGELOG.md  SENSOR_FUSION_ARCHITECTURE.md  STM32_MEMORY_CONFIG.md  STM32_MEMORY_POOL_FIX.md  TOPICS.md  TOPIC_VERIFICATION_REPORT.md  VERIFICATION_SUMMARY.md
mros2-mbed-chassis-dynamics/: .gitignore  CMakeLists.txt  README.md
mros2-mbed-chassis-dynamics/libs/X-Nucleo-IKS4A1_mbedOS/: README.md  plt_iks4a1.h  (+3 more)
mros2-mbed-chassis-dynamics/platform/: mros2-platform.h
mros2-mbed-l1/: CMakeLists.txt
mros2-mbed-sensors-gnss/: CMakeLists.txt  README.md  build.bash
mros2-mbed-sensors-gnss/platform/: mros2-platform.h
runs/logs/: chassis_sensors_20251103_094351.csv  gnss_spresense_20251103_094046.csv  gnss_spresense_20251103_094351.csv  gnss_spresense_20251103_104115.csv  gnss_spresense_20251103_104555.csv  gnss_spresense_20251103_105644.csv  gnss_spresense_20251103_105804.csv  gnss_spresense_20251103_105946.csv  gnss_spresense_20251103_110037.csv  gnss_spresense_20251103_110212.csv
scripts/: remote_flash_chassis.sh  remote_flash_sensors.sh
ws_base/: ARCHITECTURE.md  DOMAIN_CONFIG_SUMMARY.md  README.md  RUNNING_NODES.md  SETUP_AND_TROUBLESHOOTING.md  TOPIC_REFERENCE.md  build_clean.sh  build_inc.sh  launch_base_screen.sh  launch_base_tmux.sh  launch_monitoring.sh
ws_base/docs/: ARCHITECTURE.md  LAUNCH.md  QUICK_START.md  SETUP.md  TOPICS.md
ws_base/src/: action_ifaces  services_ifaces
ws_base/src/mission_control/: CMakeLists.txt  README.md  package.xml
ws_base/src/mission_control/config/: params.yaml
ws_base/src/mission_control/launch/: node_comlaunch.py
ws_base/src/mission_control/src/: node_base_monitoring.cpp  node_commands.cpp  node_monitoring.cpp  node_monitoring.cpp.bak
ws_base/src/pkg_commands/: CMakeLists.txt  package.xml
ws_base/src/pkg_commands/config/: params.yaml
ws_base/src/pkg_commands/launch/: node_comlaunch.py
ws_base/src/pkg_commands/src/: node_commands.cpp  node_monitoring.cpp
ws_jetson/: .gitignore  README.md  REFACTORING_SUMMARY.md  build_clean.sh  build_inc.sh  launch_gui.sh  launch_headless.sh  launch_jetson_tmux.sh
ws_jetson/docs/: architecture.md  configuration.md  nodes.md  troubleshooting.md
ws_jetson/logs/: rover_ctl_log.csv  rover_ctl_log_ver_2.csv  rover_ctl_log_ver_3.csv
ws_jetson/pkg_imagproc/: package.xml  setup.cfg  setup.py
ws_jetson/vision_navigation/: PARAMETER_EDITING_GUIDE.md  README.md  package.xml  setup.cfg  setup.py
ws_jetson/vision_navigation/config/: camera_params.yaml  lane_detection_params.yaml  steering_control_params.yaml  vision_nav_gui.yaml  vision_nav_headless.yaml
ws_jetson/vision_navigation/launch/: control_domain5.launch.py  vision_domain6.launch.py  vision_nav_gui.launch.py  vision_nav_headless.launch.py  vision_navigation.launch.py
ws_jetson/vision_navigation/vision_navigation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ws_jetson/vision_navigation/vision_navigation_pkg/: camera_stream_node.py  config.py  control_filters.py  domain_bridge_jetson.py  helpers.py  lane_detection_node.py  lane_detector.py  steering_control_domain5.py  steering_control_node.py
ws_rpi/: .gitignore  BUILD.md  README.md  build.sh  build_clean.sh  build_inc.sh  launch_monitoring.sh  launch_rover_tmux.sh
ws_rpi/docs/: qos_configuration.md  rover_launch_system.md
ws_rpi/src/: msgs_ifaces
ws_rpi/src/pkg_base_bridge/: CMakeLists.txt  README.md  package.xml
ws_rpi/src/pkg_base_bridge/src/: node_base_bridge.cpp
ws_rpi/src/pkg_chassis_control/: CMakeLists.txt  package.xml
ws_rpi/src/pkg_chassis_control/src/: node_chassis_controller.cpp  node_domain_bridge.cpp
ws_rpi/src/pkg_gnss_navigation/: CMakeLists.txt  package.xml
ws_rpi/src/pkg_gnss_navigation/src/: node_gnss_mission_monitor.cpp  node_gnss_spresense.cpp  node_gnss_ublox.cpp
ws_rpi/src/pkg_rover_monitoring/: CMakeLists.txt  package.xml
ws_rpi/src/pkg_rover_monitoring/launch/: monitoring_bridge.launch.py
ws_rpi/src/pkg_rover_monitoring/scripts/: domain_relay.py
ws_rpi/src/pkg_rover_monitoring/src/: domain_bridge.py  node_domain_relay.cpp  node_rover_monitoring.cpp
ws_rpi/src/pkg_sensdata/: CMakeLists.txt  package.xml
ws_rpi/src/pkg_sensdata/src/: node_imudata.cpp  node_sensdata.cpp
ws_rpi/src/rover_launch_system/: package.xml  setup.py
ws_rpi/src/rover_launch_system/launch/: rover_startup.launch.py
ws_rpi/temp/: node_databridge_bak.cpp.bak  node_gnss.cpp.bak  node_imudata.cpp  node_rocon.cpp  node_rocon.cpp.bak  node_rocon_v2_bak.cpp  node_rocon_v2_bak.cpp.bak
ws_spresense/gnss_v2/: gnss_v2.ino
(+659 files in other folders)
