<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pkg_chassis_control</name>
  <version>0.0.0</version>
  <description>Chassis Control Package - Low-level motor control and domain bridging</description>
  <maintainer email="viewjirapat@gmail.com">yupi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>msgs_ifaces</build_depend>
  <build_depend>services_ifaces</build_depend>
  <build_depend>ifaces_rover</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>msgs_ifaces</exec_depend>
  <exec_depend>services_ifaces</exec_depend>
  <exec_depend>ifaces_rover</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
