<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pkg_gnss_navigation</name>
  <version>0.0.0</version>
  <description>GNSS Navigation Package - Manages GNSS data and waypoint-based navigation</description>
  <maintainer email="viewjirapat@gmail.com">yupi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>jsoncpp</depend>
  <depend>msgs_ifaces</depend>

  <build_depend>action_ifaces</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <exec_depend>action_ifaces</exec_depend>

  <build_depend>ifaces_position</build_depend>
  <exec_depend>ifaces_position</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
