<package format="3">
  <name>rover_launch_system</name>
  <version>0.0.0</version>
  <description>Centralized launch system for the rover.</description>
  <maintainer email="curry@todo.com">curry</maintainer>
  <license>TODO: License declaration</license>

  <!-- Runtime dependencies for any package that uses Python launch files -->
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>